--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.timeline": "1.6.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.interaction.toolkit": "2.2.0",
+    "com.unity.xr.legacyinputhelpers": "2.1.10",
     "com.unity.xr.management": "4.3.3",
     "com.unity.xr.oculus": "1.12.1",
     "com.unity.modules.ai": "1.0.0",
